Cleaned and optimized the API and routing
